<resources>
    <string name="app_name">FreeBooks</string>
    <string name="titol">FreeBooks</string>
    <string name="usuari">Usuari: </string>
    <string name="contrasenya">Contrasenya: </string>
    <string name="confirma_contrasenya">Repeteix Contrasenya: </string>
    <string name="mail">Email: </string>
    <string name="inici_sessio">Inicia sessió</string>
    <string name="nou_usuari">Nou usuari</string>
    <string name="introdueix_usuari">Introdueix l\'usuari...</string>
    <string name="introdueix_contrasenya">Introdueix la contrasenya...</string>
    <string name="introdueix_mail">Introdueix el teu correu...</string>
    <string name="introdueix_confirma_contrasenya">Confirma la contrasenya...</string>
    <string name="logout">Tanca sessió</string>
    <string name="titol_alta">Alta d\'usuari</string>
    <string name="boto_alta">Registra\'t</string>
    <string name="boto_cancelar">Cancel·la</string>
    <string name="imageLogoBooks">logoBooks</string>
    <string name="imageAddUser">addUser</string>
    <string name="sortir">Sortir</string>
    <string name="app_logout">Logout</string>
    <string name="app_refresh">Refresh</string>
    <string name="app_search">Search</string>
    <string name="app_editUser">Edit User</string>
    <string name="thumbnail">thumbnail</string>
    <string name="titol_info_llibre">Informació del llibre</string>
    <string name="imatge_llibre">Imatge del llibre</string>
    <string name="label_titol">Títol:</string>
    <string name="label_autor">Autor:</string>
    <string name="label_descripcio">Descripció:</string>
    <string name="label_isbn">ISBN:</string>
    <string name="label_idioma">Idioma:</string>
    <string name="label_pagines">Pàgines:</string>
    <string name="label_editor_i_any">Editor i Any:</string>
    <string name="text_editoriany">Editor i Any</string>
    <string name="text_pagines">Pàgines</string>
    <string name="text_idioma">Idioma</string>
    <string name="text_isbn">ISBN</string>
    <string name="text_titol">Títol</string>
    <string name="text_autor">Autor</string>
    <string name="text_descripcio">Descripció</string>
    <string name="boto_reserva">Reserva\'l</string>
    <string name="boto_tornar">Tornar</string>
    <string name="titol_edita_usuari">Edició de l\'usuari</string>
    <string name="boto_guardar">Guardar Canvis</string>
    <string name="action_settings">Settings</string>
    <string name="app_bookings">Bookings</string>
    <string name="boto_reservar">Botó Reservar</string>
    <string name="labelReservar">Reservar:</string>
    <string name="titol_reserves">Reserves</string>
    <string name="titol_de_prova">Titol de prova</string>
    <string name="autor_de_prova">Autor de prova</string>
    <string name="_16_04_2018">16/04/2018</string>
    <string name="data_reserva">Data Recollida:</string>
</resources>
