<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/dataReserva1"
        android:layout_width="128dp"
        android:layout_height="23dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="172dp"
        android:layout_marginTop="232dp"
        android:text="@string/_16_04_2018"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dataReservaLabel1"
        android:layout_width="100dp"
        android:layout_height="23dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="232dp"
        android:text="@string/data_reserva"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageReserves"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="276dp"
        android:contentDescription="@string/imageAddUser"
        android:src="@android:drawable/ic_input_get"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titolReserves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        android:text="@string/titol_reserves"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/thumbnailReserva1"
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="164dp"
        android:adjustViewBounds="false"
        android:background="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleReserva1"
        android:layout_width="229dp"
        android:layout_height="23dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="168dp"
        android:text="@string/titol_de_prova"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/autorReserva2"
        android:layout_width="229dp"
        android:layout_height="23dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="200dp"
        android:text="@string/autor_de_prova"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonEditarReserva1"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="164dp"
        android:contentDescription="@string/boto_reservar"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonAnularReserva1"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="208dp"
        android:contentDescription="@string/boto_reservar"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTornarReserves"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="496dp"
        android:text="@string/boto_tornar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>