<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:weightSum="1">


    <ImageView
        android:id="@+id/imageLogoBooks"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="276dp"
        android:contentDescription="@string/imageLogoBooks"
        android:src="@drawable/logobooks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titolAltaUsuari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="124dp"
        android:text="@string/titol"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/labelUsuari"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/usuari"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textUsuari"
        app:layout_constraintEnd_toStartOf="@+id/textUsuari"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textUsuari"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/introdueix_usuari"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelUsuari"
        app:layout_constraintTop_toBottomOf="@+id/titolAltaUsuari">

        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </EditText>


    <TextView
        android:id="@+id/labelContrasenya"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/contrasenya"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textContrasenya"
        app:layout_constraintEnd_toStartOf="@+id/textContrasenya"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textContrasenya"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/introdueix_contrasenya"
        android:inputType="textPassword"
        android:labelFor="@+id/labelContrasenya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelContrasenya"
        app:layout_constraintTop_toTopOf="@+id/textUsuari"></EditText>

    <Button
        android:id="@+id/buttonIniciarSessio"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/inici_sessio"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDonarAlta"
        app:layout_constraintEnd_toStartOf="@+id/buttonDonarAlta"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDonarAlta"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/nou_usuari"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonIniciarSessio"
        app:layout_constraintTop_toBottomOf="@+id/textContrasenya" />


    <Button
        android:id="@+id/buttonSortir"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sortir"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/missatge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDonarAlta" />


</android.support.constraint.ConstraintLayout>