<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/thumbnail" />

    <TextView
        android:id="@+id/title"
        android:layout_width="229dp"
        android:layout_height="40dp"
        android:layout_above="@+id/autor"
        android:layout_alignStart="@+id/autor" />

    <TextView
        android:id="@+id/autor"
        android:layout_width="229dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/thumbnail"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="63dp"
        android:textStyle="italic" />

    <ImageButton
        android:id="@+id/buttonReservar"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textReservar"
        android:layout_toEndOf="@+id/title"
        android:contentDescription="@string/boto_reservar"
        android:src="@android:drawable/ic_input_get" />

    <TextView
        android:id="@+id/textReservar"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/title"
        android:layout_toEndOf="@+id/title"
        android:gravity="center"
        android:text="@string/labelReservar"
        android:textSize="12sp" />


</RelativeLayout>